[package]
name = 'seta'
version = '0.1.0'
authors = ['Zain Aamer <ZippeyKeys12@gmail.com>']
edition = '2018'

[dependencies]
# Command-line
clap = '2.33.0'

# Macros
lazy_static = '1.4.0'

# Errors
anyhow = "1.0.33"

# Parallelism
rayon = '1.3.0'

# Statics
phf = { version = "0.8.0", features = ["macros"] }
static_assertions = '1.1.0'

# Parsing
regex = '1.3.4'
toml = '0.5.6'
nom = '5.1.1'

[dependencies.inkwell]
git = 'https://github.com/TheDan64/inkwell'
branch = 'master'
features = ['llvm9-0']
