[package]
authors = ['Zain Aamer <ZippeyKeys12@gmail.com>']
edition = '2018'
name = 'seta'
version = '0.1.0'

[dependencies]
# Command-line
clap = '2.33.0'

# Macros
lazy_static = '1.4.0'

# Errors
anyhow = "1.0.33"

# Parallelism
rayon = '1.3.0'

# Statics
phf = {version = "0.8.0", features = ["macros"]}

# Parsing
logos = "0.11.4"
nom = '5.1.1'
num-derive = "0.3.3"
num-traits = "0.2.14"
regex = '1.3.4'
rowan = "0.12.6"
toml = '0.5.6'

# Graphs
# petgraph = "0.5.1" # For relative precedence

# Arbitrary ints
num-bigint = "0.4.0"

# SMT
[dependencies.z3]
features = ["static-link-z3"]
version = "0.10.0"

# Code Generation
[dependencies.inkwell]
branch = 'master'
features = ['llvm9-0']
git = 'https://github.com/TheDan64/inkwell'

[dev-dependencies]
static_assertions = '1.1.0'
